升级AI助手，调用知识库检索回答。